@@ -1,8 +1,8 @@
-   echo = 1 (on)
+   echo = 1
 ? sum(x=0,50000,x);
 ? sum(x=1,1000,log(x));
 ? sum(x=1,25,sum(y=1,100,x/y),0.0);
 ? sum(x=1,100,sum(y=1,100,x/y,0.0));
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 24
+Total time spent: 17
