@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? default(breakloop,1)
 ? my(bound=100,step=20,halt=41);check(B)=my(bi=[B^2]);for(i=1,bound,my(p=i+step,N=p^2);if(i==halt,error("check:",N)))
 (B)->my(bound=100,step=20,halt=41);my(bi=[B^2]);for(i=1,bound,my(p=i+step,N=
@@ -123,4 +123,4 @@ T
 break> break
 
 ? print("Total time spent: ",gettime);
-Total time spent: 0
+Total time spent: 1
