@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? ellinit([-1,0])
 [0, 0, 0, -1, 0, 0, -2, 0, -1, 48, 0, 64, 1728, Vecsmall([1]), [Vecsmall([12
 8, 1])], [0, 0, 0, 0, 0, 0, 0, 0]]
