@@ -642,7 +642,7 @@ Type: [III{8}], p. 184
 ge 184", [9]]]]
 [59049, Mat([3, 10]), x^6 - 6*x^3 + 81*x^2 + 9, [3, [5, [Mod(0, 3), Mod(0, 3
 )]], ["[III{8}] page 184", [9]]]]
-   echo = 1 (on)
+   echo = 1
 ? genus2red(-x^6-6*x^2-7,3)
 [81, Mat([3, 4]), -x^6 - 6*x^2 - 7, [3, [7, []], ["(tame) [I*{1}-I*{1}-0] pa
 ge 180", [4, 4]]]]
@@ -725,4 +725,4 @@ I*{0}-0] page 170", [4, 2, 2]]]]
 [729, Mat([3, 6]), 1593*x^6 + 6750*x^5 + 11817*x^4 + 10952*x^3 + 5672*x^2 + 
 1560*x + 180, [3, [6, [Mod(0, 3)]], ["[I{5}-IV*-0] pages 159-177", [15]]]]
 ? print("Total time spent: ",gettime);
-Total time spent: 142
+Total time spent: 133
