@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? plotinit(0,500,500)
 ? plotmove(0,0,0);plotbox(0,500,500)
 ? plotmove(0,200,150)
@@ -62,4 +62,4 @@
 ? psdraw([0,10,10])
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 16
+Total time spent: 6
