@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? algdep(2*cos(2*Pi/13),6)
 x^6 + x^5 - 5*x^4 - 4*x^3 + 6*x^2 + 3*x - 1
 ? algdep(2*cos(2*Pi/13),6,15)
@@ -676,4 +676,4 @@ Vecsmall([4, 3, 2, 1])
 [1, 1/2, 1/3, 1/4, 1/5, 1/6, 1/7, 1/8, 1/9, 1/10]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 4
+Total time spent: 8
