@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? addprimes([nextprime(10^9),nextprime(10^10)])
 [1000000007, 10000000019]
 ? bestappr(Pi,10000)
@@ -269,4 +269,4 @@ x^2 - x + 3
 Mod(1951, 3120), Mod(2081, 3120)]]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 12
+Total time spent: 17
