@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? +3
 3
 ? -5
@@ -123,4 +123,4 @@ O(x^12)
 ? (1+I)*(1+1/2*I)
 1/2 + 3/2*I
 ? print("Total time spent: ",gettime);
-Total time spent: 4
+Total time spent: 2
