@@ -1,4 +1,4 @@
-   echo = 1 (on)
+   echo = 1
 ? apol=y^3+5*y+1
 y^3 + 5*y + 1
 ? deriv((x+y)^5,y)
@@ -150,4 +150,4 @@ x + x^2 - 1/6*x^3 - 1/2*x^4 - 59/120*x^5 - 1/8*x^6 + 419/5040*x^7 + 59/720*x
 name
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 0
+Total time spent: 5
