@@ -1,5 +1,5 @@
 1
-   echo = 1 (on)
+   echo = 1
 ? alias(ln,log)
 ? ln(2)
 0.69314718055994530941723212145817656807
@@ -100,4 +100,4 @@ give a value for s? printtex((x+y)^3/(x-y)^2)
 400 1.6324242855329314481714056192369470068
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 4
+Total time spent: 5
