@@ -1,5 +1,5 @@
    realprecision = 2003 significant digits (2000 digits displayed)
-   echo = 1 (on)
+   echo = 1
 ? abs(-0.01)
 0.01000000000000000000000000000000000000000000000000000000000000000000000000
 0000000000000000000000000000000000000000000000000000000000000000000000000000
@@ -435,4 +435,4 @@ x^17 - 1
 763732423 E-8*I
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 12
+Total time spent: 22
