@@ -330,6 +330,7 @@ BA  132- [libpari] FpXn_mul, FpXn_sqr, RgXn_recip_shallow, FpXn_exp,
 BA  133- [libpari] FpX_integ, FpX_convol
     134- allow zeta(power series)
     135- New GP function laurentseries
+LGr 136- default(echo): new value echo = 2 [ print as is, incl. whitespace ]
 
   Changed
       1- rewrite bnfnarrow
